--- a/templates/no_market_found.html
+++ b/templates/no_market_found.html
@@ -4,16 +4,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device_width, initial-scale=1.0">
-    <title>{{ question }}</title>
+    <title>No market found</title>
     <link href="{{ url_for('static', filename='styles/style.css')}}" rel="stylesheet" />
   </head>
   
   <body>
-    <h1>{{ question }}</h1>
-    <p>This question has type {{ market_type }}</p> <!-- change this to be legit -->
-    
+    <h1>No market found</h1>
+    <p>Sorry, we couldn't find a market. Would you like to try again?</p>
     <form action="/market_info">
-      <input type="text" name="market_name" id="market_prob" placeholder="Enter search terms" />
+      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms for this market" />
       <button type="submit">Search</button>
     </form>
   </body>
