Shorten text in search bar

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>Get Market Information</h1>
     <form action="/market_info">
-      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms for this market" />
+      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms" />
       <button type="submit">Search</button>
     </form>
   </body>
