--- a/templates/binary_market.html
+++ b/templates/binary_market.html
@@ -14,7 +14,7 @@
     <p>You can see the market <a href="{{ market_url }}">here</a>.</p>
     <p>Would you like to search for a different market?</p>
     <form action="/market_info">
-      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms for this market" />
+      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms" />
       <button type="submit">Search</button>
     </form>
   </body>
