--- a/templates/no_market_found.html
+++ b/templates/no_market_found.html
@@ -12,7 +12,7 @@
     <h1>No market found</h1>
     <p>Sorry, we couldn't find a market. Would you like to try again?</p>
     <form action="/market_info">
-      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms for this market" />
+      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms" />
       <button type="submit">Search</button>
     </form>
   </body>
