--- a/templates/cant_handle_this.html
+++ b/templates/cant_handle_this.html
@@ -14,7 +14,7 @@
     <p>Would you like to search for a different market?</p>
     
     <form action="/market_info">
-      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms for this market" />
+      <input type="text" name="market_search_text" id="market_search_text" placeholder="Enter search terms" />
       <button type="submit">Search</button>
     </form>
   </body>
